# tanmatsu-matter

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  README.md  bootstrap.sh  build.sh  partitions.csv  todo.md
main/: CMakeLists.txt  Kconfig  bsp_lvgl.c  bsp_lvgl.h  camera_qr.c  camera_qr.h  device_manager.c  device_manager.h  esp_ot_config.h  ethernet.c  ethernet.h  idf_component.yml  main.c  matter_commission.cpp  matter_commission.h  matter_device_control.cpp  matter_device_control.h  matter_init.cpp  matter_init.h  matter_project_config.h  paa_cert_data.cpp  paa_certs_embedded.cpp  paa_certs_embedded.h  sdcard.c  ui_screens.c  ui_screens.h
main/quirc/: quirc.c  quirc_internal.h
paa_cert/: dcl_0150.der
scripts/: fetch_paa_certs.sh  generate_paa_array.py
sdkconfigs/: general  tanmatsu
