idf_component_register(
	SRCS
		"main.c"
		"device_manager.c"
		"ethernet.c"
		"sdcard.c"
		"ui_screens.c"
		"camera_qr.c"
		"quirc/quirc.c"
		"quirc/identify.c"
		"quirc/decode.c"
		"quirc/version_db.c"
		"matter_init.cpp"
		"matter_commission.cpp"
		"matter_device_control.cpp"
		"bsp_lvgl.c"
		"paa_certs_embedded.cpp"
		"paa_cert_data.cpp"
	PRIV_REQUIRES
		esp_lcd
		esp_timer
		driver
		esp_eth
		esp_psram
		esp_driver_ppa
		fatfs
		sdmmc
		nvs_flash
		badge-bsp
		chip
		esp_matter
		esp_matter_controller
		esp_wifi
		openthread
		espressif__mdns
		esp_driver_cam
		esp_driver_isp
		espressif__esp_cam_sensor
	INCLUDE_DIRS
		"."
		"quirc"
	EMBED_FILES
		"icons/esc.png"
		"icons/f1.png"
		"icons/f2.png"
		"icons/f3.png"
		"icons/f4.png"
		"icons/f5.png"
		"icons/f6.png"
)

idf_component_get_property(lvgl_lib lvgl COMPONENT_LIB)
idf_component_get_property(libpng_lib espressif__libpng COMPONENT_LIB)
target_link_libraries(${lvgl_lib} PUBLIC ${libpng_lib})
